--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,4 +1,3 @@
-
 .TopHeader{
     background: #979595;
     width: 100%;
@@ -9,19 +8,12 @@
 .TopHeaderPhoneNo{
     height: 1.25rem;
     color: #FFF;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 0.75rem;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 
     span{
         color: #CDFE08;
-        font-family: Inter;
-        font-size: 0.75rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
     }
 }
 
@@ -35,8 +27,8 @@
 
 .HeaderLogo{
     margin-left: 1.94rem;
-    width: 8.46875rem;
-    height: 2.71875rem;
+    width: 8.469rem;
+    height: 2.719rem;
 }
 
 .PagesContainer{
@@ -47,16 +39,14 @@
 }
 
 .NavigationLink{
-        text-decoration: none;
-        width: 5.4375rem;
-        height: 1.8125rem;
-        color: #FFF;
-        font-family: Inter;
-        font-size: 1.0625rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        text-align: center;
+    text-decoration: none;
+    width: 5.438rem;
+    height: 1.813rem;
+    color: #FFF;
+    font-family: Inter, sans-serif;
+    font-size: 1.0625rem;
+    font-weight: 400;
+    text-align: center;
 }
 
 .NavigationLink.active{
@@ -67,37 +57,28 @@
 
 .HorizontalLine{
     text-align: center;
-    width: 0.9375rem;
-    height: 1.8125rem;
+    width: 0.938rem;
+    height: 1.813rem;
     color: #A2A2A2;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 1.0625rem;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 
-.ProfileContainer{
-    .UserIcon{
-        padding-right: 1.5rem ;
-        border: 0.06rem;
-        color: white !important;
-        width: 1.875rem !important;
-        height: 1.875rem !important;
-        stroke-width: 1px;
-    }
+.ProfileContainer .UserIcon{
+    padding-right: 1.5rem;
+    color: white !important;
+    width: 1.875rem !important;
+    height: 1.875rem !important;
 }
 
 .DrawerIconButtonContainer{
     display: none !important;
 }
 
-@media(300px<=width<=600px){
-
+@media screen and (max-width: 600px){
     .HeaderLogo{
         margin-left: 0;
-        width: 8.46875rem;
-        height: 2.71875rem;
     }
 
     .DrawerIconButtonContainer{
@@ -117,37 +98,16 @@
     }
 
     .NavigationLink{
-        text-decoration: none;
-        width: 5.4375rem;
-        height: 1.8125rem;
-        color: #FFF;
-        font-family: Inter;
-        font-size: 1.0625rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        text-align: center;
         margin: 0 2rem;
-}
-
-.NavigationLink.active{
-    color: #CDFE08;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-bottom: solid 1px #CDFE08;
-}
+    }
 
     .DesktopMenu{
         display: none;
     }
 
-    .ProfileContainer{
-        .UserIcon{
-            padding-right: 0 ;
-            border: 0.06rem;
-            color: white !important;
-            width: auto;
-            height: auto;
-        }
+    .ProfileContainer .UserIcon{
+        padding-right: 0;
+        width: auto;
+        height: auto;
     }
-    
 }
